[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Cannon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level3.gd" type="Script" id=4]
[ext_resource path="res://fonts/fixedsys.tres" type="DynamicFont" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]

[sub_resource type="ParticlesMaterial" id=1]
resource_local_to_scene = true
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 4.123, 5.625, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 0.01
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.45
scale_random = 0.41
color = Color( 1, 0.372549, 0.25098, 1 )

[node name="Level3" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 24, 24 )

[node name="DeathParticles" parent="Player" index="5"]
process_material = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.08
drag_margin_top = 0.08
drag_margin_right = 0.08
drag_margin_bottom = 0.08

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -327680, 3, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 4, 0, -262144, 0, 0, -262143, 5, 0, -262129, 6, 0, -262128, 0, 0, -196608, 0, 0, -196592, 0, 0, -131072, 0, 0, -131056, 0, 0, -65536, 0, 0, -65520, 0, 0, 0, 0, 0, 1, 4, 0, 16, 0, 0, 65536, 0, 0, 65552, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 196608, 0, 0, 196613, 0, 0, 196614, 8, 0, 196618, 10, 0, 196619, 0, 0, 196624, 0, 0, 262144, 0, 0, 262149, 0, 0, 262150, 8, 0, 262154, 10, 0, 262155, 0, 0, 262160, 0, 0, 327680, 0, 0, 327685, 0, 0, 327686, 8, 0, 327690, 10, 0, 327691, 0, 0, 327696, 0, 0, 393216, 0, 0, 393221, 0, 0, 393222, 8, 0, 393226, 10, 0, 393227, 0, 0, 393232, 0, 0, 458752, 0, 0, 458757, 0, 0, 458758, 8, 0, 458762, 10, 0, 458763, 0, 0, 458768, 0, 0, 524288, 0, 0, 524293, 0, 0, 524294, 8, 0, 524298, 10, 0, 524299, 0, 0, 524304, 0, 0, 589824, 0, 0, 589829, 0, 0, 589830, 8, 0, 589834, 10, 0, 589835, 0, 0, 589840, 0, 0, 655360, 0, 0, 655365, 0, 0, 655366, 8, 0, 655370, 10, 0, 655371, 0, 0, 655376, 0, 0, 720896, 0, 0, 720901, 0, 0, 720902, 8, 0, 720906, 10, 0, 720907, 0, 0, 720912, 0, 0, 786432, 0, 0, 786437, 0, 0, 786438, 8, 0, 786442, 10, 0, 786443, 0, 0, 786448, 0, 0, 851968, 0, 0, 851973, 0, 0, 851974, 8, 0, 851978, 10, 0, 851979, 0, 0, 851984, 0, 0, 917504, 0, 0, 917509, 0, 0, 917510, 8, 0, 917514, 10, 0, 917515, 0, 0, 917520, 0, 0, 983040, 0, 0, 983045, 0, 0, 983046, 8, 0, 983050, 10, 0, 983051, 0, 0, 983056, 0, 0, 1048576, 0, 0, 1048581, 0, 0, 1048582, 8, 0, 1048586, 10, 0, 1048587, 0, 0, 1048592, 0, 0, 1114112, 0, 0, 1114117, 0, 0, 1114118, 8, 0, 1114122, 10, 0, 1114123, 0, 0, 1114128, 0, 0, 1179648, 0, 0, 1179653, 0, 0, 1179654, 8, 0, 1179658, 10, 0, 1179659, 0, 0, 1179664, 0, 0, 1245184, 0, 0, 1245189, 0, 0, 1245190, 4, 0, 1245194, 3, 0, 1245195, 0, 0, 1245200, 0, 0, 1310720, 0, 0, 1310725, 6, 0, 1310726, 0, 0, 1310727, 8, 0, 1310729, 10, 0, 1310730, 0, 0, 1310731, 5, 0, 1310736, 0, 0, 1376256, 0, 0, 1376262, 0, 0, 1376263, 8, 0, 1376265, 10, 0, 1376266, 0, 0, 1376272, 0, 0, 1441792, 0, 0, 1441798, 0, 0, 1441799, 8, 0, 1441801, 10, 0, 1441802, 0, 0, 1441808, 0, 0, 1507328, 0, 0, 1507334, 0, 0, 1507335, 8, 0, 1507337, 10, 0, 1507338, 0, 0, 1507344, 0, 0, 1572864, 0, 0, 1572870, 0, 0, 1572871, 8, 0, 1572873, 10, 0, 1572874, 0, 0, 1572880, 0, 0, 1638400, 0, 0, 1638406, 0, 0, 1638407, 8, 0, 1638409, 10, 0, 1638410, 0, 0, 1638416, 0, 0, 1703936, 0, 0, 1703942, 0, 0, 1703943, 8, 0, 1703945, 10, 0, 1703946, 0, 0, 1703952, 0, 0, 1769472, 0, 0, 1769478, 0, 0, 1769479, 8, 0, 1769481, 10, 0, 1769482, 0, 0, 1769488, 0, 0, 1835008, 0, 0, 1835014, 0, 0, 1835015, 8, 0, 1835017, 10, 0, 1835018, 0, 0, 1835024, 0, 0, 1900544, 0, 0, 1900550, 0, 0, 1900551, 8, 0, 1900553, 10, 0, 1900554, 0, 0, 1900560, 0, 0, 1966080, 0, 0, 1966086, 0, 0, 1966087, 8, 0, 1966089, 10, 0, 1966090, 0, 0, 1966096, 0, 0, 2031616, 0, 0, 2031622, 0, 0, 2031623, 8, 0, 2031625, 10, 0, 2031626, 0, 0, 2031632, 0, 0, 2097152, 0, 0, 2097158, 0, 0, 2097159, 8, 0, 2097161, 10, 0, 2097162, 0, 0, 2097168, 0, 0, 2162688, 0, 0, 2162694, 0, 0, 2162695, 8, 0, 2162697, 10, 0, 2162698, 0, 0, 2162704, 0, 0, 2228224, 0, 0, 2228230, 0, 0, 2228231, 8, 0, 2228233, 10, 0, 2228234, 0, 0, 2228240, 0, 0, 2293760, 0, 0, 2293761, 4, 0, 2293765, 3, 0, 2293766, 0, 0, 2293767, 8, 0, 2293769, 10, 0, 2293770, 0, 0, 2293771, 4, 0, 2293775, 3, 0, 2293776, 0, 0, 2359296, 6, 0, 2359297, 0, 0, 2359298, 0, 0, 2359299, 0, 0, 2359300, 0, 0, 2359301, 0, 0, 2359302, 5, 0, 2359306, 6, 0, 2359307, 0, 0, 2359308, 0, 0, 2359309, 0, 0, 2359310, 0, 0, 2359311, 0, 0, 2359312, 5, 0, 2424833, 9, 0, 2424834, 9, 0, 2424835, 9, 0, 2424836, 9, 0, 2424837, 9, 0, 2424843, 9, 0, 2424844, 9, 0, 2424845, 9, 0, 2424846, 9, 0, 2424847, 9, 0, 2555931, 0, 0, 2621467, 0, 0, 2687003, 0, 0, 2752512, 7, 0, 2752513, 7, 0, 2752514, 7, 0, 2752526, 7, 0, 2752527, 7, 0, 2752528, 7, 0, 2752539, 0, 0, 2818048, 0, 0, 2818049, 0, 0, 2818050, 0, 0, 2818051, 7, 0, 2818052, 7, 0, 2818060, 7, 0, 2818061, 7, 0, 2818062, 0, 0, 2818063, 0, 0, 2818064, 0, 0, 2818075, 0, 0, 2883584, 0, 0, 2883586, 6, 0, 2883587, 0, 0, 2883588, 0, 0, 2883589, 7, 0, 2883590, 7, 0, 2883591, 7, 0, 2883592, 7, 0, 2883593, 7, 0, 2883594, 7, 0, 2883595, 7, 0, 2883596, 0, 0, 2883597, 0, 0, 2883598, 5, 0, 2883600, 0, 0, 2883611, 0, 0, 2949120, 0, 0, 2949124, 6, 0, 2949125, 0, 0, 2949126, 0, 0, 2949127, 0, 0, 2949128, 0, 0, 2949129, 0, 0, 2949130, 0, 0, 2949131, 0, 0, 2949132, 5, 0, 2949136, 0, 0, 2949147, 0, 0, 3014656, 0, 0, 3014672, 0, 0, 3014683, 0, 0, 3080192, 0, 0, 3080193, 0, 0, 3080194, 0, 0, 3080195, 0, 0, 3080196, 0, 0, 3080197, 0, 0, 3080198, 0, 0, 3080199, 0, 0, 3080200, 0, 0, 3080201, 0, 0, 3080202, 0, 0, 3080203, 0, 0, 3080204, 0, 0, 3080205, 0, 0, 3080206, 0, 0, 3080207, 0, 0, 3080208, 0, 0, 3080217, 12, 0, 3080219, 0, 0, 3145744, 0, 0, 3145745, 0, 0, 3145746, 0, 0, 3145747, 0, 0, 3145748, 0, 0, 3145749, 0, 0, 3145750, 0, 0, 3145751, 0, 0, 3145752, 0, 0, 3145753, 0, 0, 3145754, 0, 0, 3145755, 0, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Polygon2D" type="Polygon2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -160, 216 )
color = Color( 0.141176, 0.631373, 0.611765, 1 )
polygon = PoolVector2Array( -128, -392, -128, -40, -128, 832, 312, 832, 736, 832, 728, -392 )
__meta__ = {
"_edit_group_": true
}

[node name="Cannon" parent="." instance=ExtResource( 2 )]
position = Vector2( 136, 680 )

[node name="Cannon2" parent="." instance=ExtResource( 2 )]
position = Vector2( 136, 616 )

[node name="Cannon3" parent="." instance=ExtResource( 2 )]
position = Vector2( 328, 696 )

[node name="Controls" type="RichTextLabel" parent="."]
visible = false
margin_left = 24.0
margin_top = 72.0
margin_right = 184.0
margin_bottom = 176.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "SOME CANNONS ROTATE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="RichTextLabel" parent="."]
visible = false
margin_left = 232.0
margin_top = -216.0
margin_right = 360.0
margin_bottom = -192.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "DOOR IS GOAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wtf" type="RichTextLabel" parent="."]
visible = false
margin_left = 512.0
margin_top = 112.0
margin_right = 552.0
margin_bottom = 152.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "wtf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 6 )]
[connection signal="door_touch" from="Player" to="." method="_on_Player_door_touch"]
[connection signal="player_death" from="Player" to="HUD" method="_on_Player_player_death"]
[connection signal="area_entered" from="Player/CannonCollisonDetector" to="." method="_on_CannonCollisonDetector_area_entered"]

[editable path="Player"]

[editable path="Cannon"]
